# bridgeai-intelligence-engine

./: .env.example  .gitignore  APIFY_INTEGRATION_SUMMARY.md  API_LIMITS_ANALYSIS.md  ARCHITECTURE_FLOW.md  BridgeAI_Intelligence_Engine_Project_Brief.docx  CONTENT_SOURCE_MAPPING.md  DAILY_INTELLIGENCE_API.md  EXTRACTION_CAPABILITIES.md  FIX_SUMMARY_2026-07-14.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_NOTES.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PRIVATE_SOURCES_GUIDE.md  Procfile  QUICK_FLOW.md  RAILWAY_DEPLOYMENT.md  README.md  SYSTEM_CONFIG_UPDATE.md  firecrawl_skill.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  signal_filter.py  test_filter_endpoint.py  test_minimal_filter.py  updated_signal_filter.py
docs/: signal-filter-api.md  signal-filter-architecture.md  signal-filter-audit-log.md  signal-filter-configuration.md  signal-filter-evaluation.md  signal-filter-scoring-rubric.md
migrations/: 001_daily_intelligence_v2.sql  002_historical_signals.sql
output/: apify-actors-integration-report.json  daily-source-integration-report.json
scripts/: check_database_contents.py  check_db_stats.py  debug_you_com.py  populate_database.py  quick_verify_analysis.py  reset_db.py  run_daily_source_integration.py  run_dev.ps1  run_signal_filter_e2e.py  test_all_apify_scrapers.py  test_all_apis.py  test_all_sources_comprehensive.py  test_api_fallback.py  test_apify.py  test_apify_working.py  test_complete_pipeline.py  test_database.py  test_database_cloud.py  test_failed_apis_detailed.py  test_google_trends.py  (+13 more)
(+80 files in other folders)
